# zeebe-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  build.rs
.github/workflows/: ci.yml  deploy.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-protobuf-library.md  0003-oauth2.md  0004-serialization-library.md
examples/: custom_auto_handler.rs  deploy_resource.rs  hello_client.rs  oauth.rs  pizza.rs  worker.rs
examples/resources/: hello_world.bpmn  order-process.bpmn  pizza-order.bpmn
src/: client.rs  decision.rs  deploy_resource.rs  incident.rs  job.rs  lib.rs  message.rs  oauth.rs  process_instance.rs  resource.rs  set_variables.rs  signal.rs  throw_error.rs  topology.rs  worker.rs
src/job/: activated_job.rs  complete.rs  fail.rs  update_retries.rs  update_timeout.rs
src/process_instance/: cancel.rs  create.rs  migrate.rs  modify.rs
