[package]
name = "zeebe-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4.2"
prost = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls"] }

[build-dependencies]
tonic-build = "*"
