[package]
name = "zeebe-rs"
version = "0.1.0"
edition = "2021"
description = "A gRPC client for interacting with the workflow and decision engine Camunda Zeebe."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bentebent/zeebe-rs"
readme = "README.md"
keywords = ["camunda", "zeebe", "gRPC", "protobuf", "orchestration"]
categories = ["grpc", "automation", "process orchestration"]
exclude = [".github/*", ".vscode/*", "doc/*"]

[package.metadata.docs.rs]
rustc-args = ["--experimental_allow_proto3_optional"]

[lib]
crate-type = ["rlib"]
name = "zeebe_rs"
path = "src/lib.rs"

[dependencies]
oauth2 = "5.0.0"
prost = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls"] }

[build-dependencies]
tonic-build = "*"
