[package]
name = "zeebe-rs"
version = "0.2.0"
authors = ["Tim Henriksson <henriksson.tim@gmail.com>"]
edition = "2021"
description = "A gRPC client for interacting with the workflow and decision engine Camunda Zeebe."
license = "MIT"
homepage = "https://crates.io/crates/zeebe-rs"
repository = "https://github.com/Bentebent/zeebe-rs"
readme = "README.md"
keywords = ["camunda", "zeebe", "gRPC", "protobuf", "orchestration"]
categories = ["api-bindings"]
exclude = [".github/*", ".vscode/*", "doc/*"]

[lib]
crate-type = ["rlib"]
name = "zeebe_rs"
path = "src/lib.rs"

[dependencies]
oauth2 = "5.0.0"
prost = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls"] }

[build-dependencies]
tonic-build = "0.12.3"
